<resources>
    <string name="app_name">Assignment01</string>
    <string name="title">Discount Calculator</string>
    <string name="saleField">Sale %</string>
    <string name="itemPriceField">Item Price:</string>
    <string name="itemPriceHint">Enter List Price</string>
    <string name="radioButton10">10%</string>
    <string name="radioButton15">15%</string>
    <string name="radioButton18">18%</string>
    <string name="radioButtonCustom">Custom</string>
    <string name="customSliderLabel">Custom %:</string>
    <string name="seekBarPercent">25%</string>
    <string name="discountAmount">$0.00</string>
    <string name="discountLabel">Discount:</string>
    <string name="finalPriceLabel">Final Price:</string>
    <string name="finalPrice">$0.00</string>
    <string name="resetButtonLabel">Reset</string>
    <string name="calcButtonLabel">Calculate</string>
</resources>