<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/itemPriceField"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/itemPriceField"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="229dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSaleField"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/saleField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPriceField" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/itemPriceHint"
        android:inputType="number"
        android:textSize="14sp"
        android:digits="0123456789."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toEndOf="@+id/itemPriceField"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <RadioGroup
        android:id="@+id/radioGroupSale"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewSaleField"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber">

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioButton10" />

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton15" />

        <RadioButton
            android:id="@+id/radioButton18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton18" />

        <RadioButton
            android:id="@+id/radioButtonCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonCustom" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewCustom"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/customSliderLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSaleField" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="214dp"
        android:layout_height="43dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:progress="50"
        android:progressTint="@color/design_default_color_primary"
        app:layout_constraintStart_toEndOf="@+id/textViewCustom"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSale" />

    <TextView
        android:id="@+id/seekText"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/seekBarPercent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSale" />

    <TextView
        android:id="@+id/textViewDiscountLabel"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/discountLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustom" />

    <TextView
        android:id="@+id/finalPriceLabel"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/finalPriceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDiscountLabel" />

    <TextView
        android:id="@+id/discountAmount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:minWidth="48dp"
        android:text="@string/discountAmount"
        app:layout_constraintStart_toEndOf="@+id/textViewDiscountLabel"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/finalPrice"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:minWidth="48dp"
        android:text="@string/finalPrice"
        app:layout_constraintStart_toEndOf="@+id/finalPriceLabel"
        app:layout_constraintTop_toBottomOf="@+id/discountAmount" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/resetButtonLabel"
        app:layout_constraintEnd_toStartOf="@+id/calcButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalPrice" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/calcButtonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resetButton"
        app:layout_constraintTop_toBottomOf="@+id/finalPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>